@@ -59,6 +59,12 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <!-- TODO: Investigate if we can get rid of this  -->
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <!---->
                 </configuration>
             </plugin>
             <plugin>
